Styled nav and fixed some spacing and hover effects

--- a/code/seans-work/style.css
+++ b/code/seans-work/style.css
@@ -31,9 +31,6 @@ footer > ul > li > a:hover {
 	text-decoration:underline;
 }
 
-#nav > ul {
-	display:none;
-}
 
 footer > ul > li {
 	color:grey;
@@ -46,7 +43,7 @@ nav {
 	height: 100px;
 	background: #52565a;
 	position:fixed;
-	z-index:1;
+	z-index:2;
 	width:100%;
 }
 
@@ -107,9 +104,10 @@ code{
 }
 
 input{
-	margin-left:10px;
+	position:relative;
+	margin-left:-10px;
 	clear:right;
-	margin-top:33px;
+	margin-top:-47px;
 	float:left;
 	font-style:italic;
 	font-size:.9em;
@@ -119,6 +117,7 @@ input{
 	background: #999fa4;
 	border:none;
 	text-indent:10px;
+	z-index:3;
 }
 
 hr { 
@@ -139,17 +138,17 @@ hr {
 
 #extralinks {
 	margin-right: 20px;
-}
-
-#extralinks li {
-	margin-top: -10px;
-	clear:left;
-	float: right;
+	margin-top: 40px;
 	font-size: 0.750em;
 	color: #b3bac2;
 	padding: 4px 10px 6px 10px;
 	border-radius: 4px;
 	font-weight: 600;
+}
+
+#extralinks li {
+	float: right;
+	margin-left:10px;
 }
 
 #nav li {
@@ -164,7 +163,7 @@ hr {
 	margin-right: 2px;
 }
 
-nav a{
+#extralinks a{
 	color: #cfd3d8;
 }
 
@@ -295,7 +294,7 @@ a:active {
 	background: #52565a;
 }
 
-#chapters li a:hover {
+#chapters li:hover a{
 		color: #00acb7;
 }
 
